<resources>
    <string name="app_name">PGMA</string>

    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="btn_toast">View toast</string>

    <string name="title_top">Top</string>
    <string name="title_pick_image">Pick image</string>
    <string name="title_pick_image2">Pick image2(chooser mix)</string>
    <string name="title_stop_watch">Stopwatch</string>
    <string name="title_image_rotate">Image rotate</string>
    <string name="title_progress_variation">Progress variation</string>
    <string name="title_image_crop">Image crop</string>
    <string name="title_image_mix">Image mix</string>
    <string name="title_touch">Touch</string>
    <string name="title_gesture">Gesture</string>
    <string name="title_fw_drawable">FW Drawable</string>
    <string name="title_media_effects">Media Effects</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_fonts">Fonts</string>
    <string name="title_text_watcher">TextWatcher</string>
    <string name="title_pinch">Pinch</string>
    <string name="title_canvas">Canvas</string>
    <string name="title_notification">Notification</string>
    <string name="title_tab">Tab</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_item_effects_autofix">EFFECT_AUTOFIX</string>
    <string name="menu_item_effects_blackwhite">EFFECT_BLACKWHITE</string>
    <string name="menu_item_effects_brightness">EFFECT_BRIGHTNESS</string>
    <string name="menu_item_effects_contrast">EFFECT_CONTRAST</string>
    <string name="menu_item_effects_crossprocess">EFFECT_CROSSPROCESS</string>
    <string name="menu_item_effects_documentary">EFFECT_DOCUMENTARY</string>
    <string name="menu_item_effects_duotone">EFFECT_DUOTONE</string>
    <string name="menu_item_effects_filllight">EFFECT_FILLLIGHT</string>
    <string name="menu_item_effects_fisheye">EFFECT_FISHEYE</string>
    <string name="menu_item_effects_flip_vertical">EFFECT_FLIP(vertical)</string>
    <string name="menu_item_effects_flip_horizontal">EFFECT_FLIP(horizontal)</string>
    <string name="menu_item_effects_grain_1_0">EFFECT_GRAIN(1.0)</string>
    <string name="menu_item_effects_grain_2_0">EFFECT_GRAIN(2.0)</string>
    <string name="menu_item_effects_grayscale">EFFECT_GRAYSCALE</string>
    <string name="menu_item_effects_lomoish">EFFECT_LOMOISH</string>
    <string name="menu_item_effects_negative">EFFECT_NEGATIVE</string>
    <string name="menu_item_effects_posterize">EFFECT_POSTERIZE</string>
    <string name="menu_item_effects_rotate90">EFFECT_ROTATE 90</string>
    <string name="menu_item_effects_rotate180">EFFECT_ROTATE 180</string>
    <string name="menu_item_effects_rotate270">EFFECT_ROTATE 270</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="hint_toast_message">Toast message</string>
    <string name="caption_octocat8">octcat 8</string>
    <string name="caption_symmetry">Symmetry octcat</string>

    <string name="caption_spinner">Style SPINNER</string>
    <string name="caption_horizontal">Style HORIZONTAL</string>
    <string name="caption_horizontal2nd">Style HORIZONTAL(2nd)</string>

    <string name="label_notification_icon_only">Icon only</string>
    <string name="label_notification_text">Text</string>
    <string name="label_notification_custom">Custom</string>
    <string name="label_notification_intent">Intent</string>
    <string name="notification_title">Notification title</string>
    <string name="notification_title_open_profile">Open profile</string>
    <string name="notification_text">Text message</string>
    <string name="notification_subtext">sub text</string>
    <string name="notification_info">Info message</string>
    <string name="remove_notifications">Remove notifications</string>

    <string name="label_tab_simple">Simple 5</string>
    <string name="label_tab_icon">Icon 3</string>
    <string name="label_tab_scrollable">Scrollable</string>
    <string name="label_tab_gravity_center">GravityCenter</string>
    <string name="label_tab_add">add tab</string>
    <string name="label_tab_remove">remove tab</string>

    <string name="msg_please_wait">Please wait...</string>
    <string name="msg_share_file_not_fond">Share file can not be found.</string>

    <string name="sample_text">01234 ABCDefgh あいうえお カキクケコ</string>
</resources>
