<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_autofix"
        android:title="@string/menu_item_effects_autofix" />
    <item
        android:id="@+id/menu_item_blackwhite"
        android:title="@string/menu_item_effects_blackwhite" />
    <item
        android:id="@+id/menu_item_brightness"
        android:title="@string/menu_item_effects_brightness" />
    <item
        android:id="@+id/menu_item_contrast"
        android:title="@string/menu_item_effects_contrast" />
    <item
        android:id="@+id/menu_item_crossprocess"
        android:title="@string/menu_item_effects_crossprocess" />
    <item
        android:id="@+id/menu_item_documentary"
        android:title="@string/menu_item_effects_documentary" />
    <item
        android:id="@+id/menu_item_duotone"
        android:title="@string/menu_item_effects_duotone" />
    <item
        android:id="@+id/menu_item_filllight"
        android:title="@string/menu_item_effects_filllight" />
    <item
        android:id="@+id/menu_item_fisheye"
        android:title="@string/menu_item_effects_fisheye" />
    <item
        android:id="@+id/menu_item_flip_vertical"
        android:title="@string/menu_item_effects_flip_vertical" />
    <item
        android:id="@+id/menu_item_flip_horizontal"
        android:title="@string/menu_item_effects_flip_horizontal" />
    <item
        android:id="@+id/menu_item_grain_1_0"
        android:title="@string/menu_item_effects_grain_1_0" />
    <item
        android:id="@+id/menu_item_grain_2_0"
        android:title="@string/menu_item_effects_grain_2_0" />
    <item
        android:id="@+id/menu_item_grayscale"
        android:title="@string/menu_item_effects_grayscale" />
    <item
        android:id="@+id/menu_item_lomoish"
        android:title="@string/menu_item_effects_lomoish" />
    <item
        android:id="@+id/menu_item_negative"
        android:title="@string/menu_item_effects_negative" />
    <item
        android:id="@+id/menu_item_rotate90"
        android:title="@string/menu_item_effects_rotate90" />
    <item
        android:id="@+id/menu_item_rotate180"
        android:title="@string/menu_item_effects_rotate180" />
    <item
        android:id="@+id/menu_item_rotate270"
        android:title="@string/menu_item_effects_rotate270" />
</menu>