<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_notification_icon_only"
        android:id="@+id/button_simple"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_notification_text"
        android:id="@+id/button_text"
        android:layout_below="@+id/button_simple"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_notification_custom"
        android:id="@+id/button_custom"
        android:layout_below="@+id/button_text"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_notification_intent"
        android:id="@+id/button_intent"
        android:layout_below="@+id/button_custom"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_notifications"
        android:id="@+id/button_remove"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/button_intent"
        android:layout_centerHorizontal="true" />

</RelativeLayout>