<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_tab_simple"
        android:id="@+id/button_simple"
        android:layout_below="@+id/tab_layout"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_tab_icon"
        android:id="@+id/button_icon"
        android:layout_below="@+id/button_simple"
        android:layout_centerHorizontal="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_tab_scrollable"
        android:id="@+id/switch_scrollable"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_tab_gravity_center"
        android:id="@+id/switch_gravity_center"
        android:layout_below="@+id/switch_scrollable"
        android:layout_alignRight="@+id/switch_scrollable"
        android:layout_alignEnd="@+id/switch_scrollable" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_tab_add"
        android:id="@+id/button_add"
        android:layout_below="@+id/switch_gravity_center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />

</RelativeLayout>