<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ivoryworks.pgma.StopwatchFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="00:00:00:00"
        android:id="@+id/digit"
        android:textSize="48sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:textColor="@color/pgma_dark"
        android:layout_centerInParent="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnStartStop"
        android:textOn="@string/stop"
        android:textOff="@string/start"
        android:layout_below="@id/digit"
        android:layout_alignLeft="@id/digit"
        android:layout_gravity="center_horizontal" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/btnReset"
        android:layout_below="@id/digit"
        android:layout_alignRight="@id/digit"
        android:layout_gravity="right|bottom" />

</RelativeLayout>
